--- a/01_helloworld/test.html
+++ b/01_helloworld/test.html
@@ -2,20 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>hello world</title>
 </head>
 <body>
 <div id="app">
-    <input v-model="message">
-    <input v-model="message">
-    <p>hello {{message}}</p>
+    <input type="text" v-model="userName">
+    <p>hello {{userName}}</p>
 </div>
 <script src="../js/vue.js"></script>
 <script>
-    var app = new Vue({
+    const vm = new Vue({
         el: '#app',
         data: {
-            message: 'think!'
+            userName:"tom"
         }
     })
 </script>
